# rusty-weather-bot

./: .gitignore  Cargo.toml  README.md  run_bot
src/: commands.rs  main.rs  weather_controller.rs
tests/: weather_controller_tests.rs
