[package]
name = "rusty-weather-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "weather_controller"
path = "src/weather_controller.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio = { version = "1.25.1", features = ["full"]} 
poise = "0.5.6"
reqwest = "0.11.22"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
